@@ -17,14 +17,14 @@ public class Snake {
     public Snake(int startX, int startY) {
         body = new ArrayList<>();
         body.add(new Point(startX, startY));
-        direction = null;
         growing = false;
     }
 
     public void move(int boardWidth, int boardHeight) {
+        System.out.println("Current direction: " + direction);
         Point head = getHead();
         Point newHead = new Point(head);
-
+        System.out.println("Moving snake...");
         //head direction to move
         switch (direction) {
             case UP -> newHead.y--;
@@ -32,7 +32,7 @@ public class Snake {
             case LEFT -> newHead.x--;
             case RIGHT -> newHead.x++;
         }
-
+        System.out.println("New head after move: " + newHead);
         // Wrap around the board (classic snake) logic
         if (newHead.x < 0) {
             newHead.x = boardWidth - 1;
@@ -40,15 +40,15 @@ public class Snake {
             newHead.x = 0;
         }
         if (newHead.y < 0) {
-            newHead.y = boardHeight - 1;
+            newHead.y = boardHeight- 1;
         } else if (newHead.y >= boardHeight) {
             newHead.y = 0;
         }
 
         //select position of tail after move
-        lastTailPosition = body.get(body.size() - 1);
+        lastTailPosition = body.getLast();
         //add new head after move to body
-        body.add(0, newHead);
+        body.addFirst(newHead);
 
         //remove tail (move tail along) if body move and growing
         if (growing) {
@@ -67,6 +67,7 @@ public class Snake {
         Point head = getHead();
         for (int i = 1; i < body.size(); i++) {
             if (head.equals(body.get(i))) {
+                System.out.println("Collision found");
                 return true; // Self-collision only
             }
         }
@@ -79,17 +80,19 @@ public class Snake {
         //add head
         body.add(new Point(x, y));
         //set default
-        direction = Direction.RIGHT;
         growing = false;
+        System.out.println("Reset called with: " + x + "," + y);
     }
 
     // Getters
-    public Point getHead() { return body.get(0); }
+    public Point getHead() { return body.getFirst(); }
     public List<Point> getBody() { return body; }
     public Direction getDirection() { return direction; }
     public Point getLastTailPosition() { return lastTailPosition; }
 
     public void setDirection(Direction direction) {
+        System.out.println("Setting direction to: " + direction);
         this.direction = direction;
     }
+
 }
